updates to workflow

--- a/combine_file_into_dataset.ipynb
+++ b/combine_file_into_dataset.ipynb
@@ -12,30 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numpy_folder_path = r\"/media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/surface_v1/PointCloud/single_files\"\n",
-    "save_folder = r\"/media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/surface_v1/PointCloud/\"\n",
-    "\n",
-    "save_name = \"surface_v1_point_cloud_All.npy\""
+    "geotype = \"pointcloud\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numpy_folder_path = r\"/media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/helix_surface_v1/point_cloud/singel_files\"\n",
+    "save_folder = r\"/media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/helix_surface_v1/point_cloud\"\n",
+    "\n",
+    "save_name = \"helix_surface_v1_NURBS_.npy\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy array new shape: (5000, 1000, 3)\n"
+      "Numpy array new shape: (4898, 1000, 3)\n"
      ]
     }
    ],
    "source": [
+    "# needed shape: BATCH_SIZE_number_of_points_3\n",
     "\n",
     "# List to store individual numpy arrays\n",
     "numpy_arrays = []\n",
@@ -49,22 +59,31 @@
     "# Combine all numpy arrays into a single 3D numpy array by adding an extra axis\n",
     "combined_array = np.stack(numpy_arrays, axis=0)\n",
     "\n",
+    "if geotype == \"pointcloud\":\n",
     "#swap the midle and last axis\n",
-    "combined_array = np.swapaxes(combined_array, 1, 2)\n",
+    "    combined_array = np.swapaxes(combined_array, 1, 2)\n",
     "\n",
-    "print(f\"Numpy array new shape: {combined_array.shape}\")"
+    "if geotype == \"surface\":\n",
+    "    #swap the midle and last axis\n",
+    "    print(f\"Before swap: {combined_array.shape}\")\n",
+    "    uv_count = combined_array.shape[-1]\n",
+    "    combined_array = combined_array.reshape(-1, uv_count*uv_count, 3)\n",
+    "    #print(f\"After swap: {combined_array.shape}\")\n",
+    "\n",
+    "print(f\"Numpy array new shape: {combined_array.shape}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined array saved to /media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/surface_v1/PointCloud/surface_v1_point_cloud_All.npy\n"
+      "Combined array saved to /media/adam/HDD_2/Datasets/NURBS_Geometry/IJAC/helix_surface_v1/point_cloud/helix_surface_v1_NURBS_.npy\n"
      ]
     }
    ],
@@ -80,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch3d",
+   "display_name": "pytorch3d_new",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
